// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`home change home route should render a link to change the default route in advanced settings if advanced settings is enabled 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        >
          <ChangeHomeRoute
            defaultRoute="/app/home"
          />
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home directories should not render directory entry if no home page section is specified 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                iconType="gear"
                onClick={[Function]}
              >
                Manage
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home directories should not render directory entry when showOnHomePage is false 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                iconType="gear"
                onClick={[Function]}
              >
                Manage
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home directories should render ADMIN directory entry in "Manage your data" panel 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <EuiFlexGroup>
        <EuiFlexItem>
          <AddData
            addBasePath={[Function]}
            features={
              Array [
                Object {
                  "category": undefined,
                  "description": "Manage the index patterns that help retrieve your data from Elasticsearch.",
                  "icon": "indexPatternApp",
                  "id": "index_patterns",
                  "path": "index_management_landing_page",
                  "showOnHomePage": true,
                  "title": "Index Patterns",
                },
              ]
            }
          />
        </EuiFlexItem>
        <EuiFlexItem>
          <ManageData
            addBasePath={[Function]}
            features={
              Array [
                Object {
                  "category": undefined,
                  "description": "Manage the index patterns that help retrieve your data from Elasticsearch.",
                  "icon": "indexPatternApp",
                  "id": "index_patterns",
                  "path": "index_management_landing_page",
                  "showOnHomePage": true,
                  "title": "Index Patterns",
                },
              ]
            }
          />
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home directories should render DATA directory entry in "Ingest your data" panel 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <EuiFlexGroup>
        <EuiFlexItem>
          <AddData
            addBasePath={[Function]}
            features={
              Array [
                Object {
                  "category": undefined,
                  "description": "Display and share a collection of visualizations and saved searches.",
                  "icon": "dashboardApp",
                  "id": "dashboard",
                  "path": "dashboard_landing_page",
                  "showOnHomePage": true,
                  "title": "Dashboard",
                },
              ]
            }
          />
        </EuiFlexItem>
        <EuiFlexItem>
          <ManageData
            addBasePath={[Function]}
            features={
              Array [
                Object {
                  "category": undefined,
                  "description": "Display and share a collection of visualizations and saved searches.",
                  "icon": "dashboardApp",
                  "id": "dashboard",
                  "path": "dashboard_landing_page",
                  "showOnHomePage": true,
                  "title": "Dashboard",
                },
              ]
            }
          />
        </EuiFlexItem>
      </EuiFlexGroup>
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home directories should render solutions in the "solution section" 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
        solutions={
          Array [
            Object {
              "description": "Visualize & analyze",
              "icon": "logoKibana",
              "id": "kibana",
              "order": 1,
              "path": "kibana_landing_page",
              "title": "Kibana",
            },
            Object {
              "description": "Description about solution two",
              "icon": "empty",
              "id": "solution-2",
              "order": 2,
              "path": "path-to-solution-two",
              "title": "Solution two",
            },
            Object {
              "description": "Description about solution three",
              "icon": "empty",
              "id": "solution-3",
              "order": 3,
              "path": "path-to-solution-three",
              "title": "Solution three",
            },
            Object {
              "description": "Description about solution four",
              "icon": "empty",
              "id": "solution-4",
              "order": 4,
              "path": "path-to-solution-four",
              "title": "Solution four",
            },
          ]
        }
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home header should not render directory entry if no home page section is specified 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                iconType="gear"
                onClick={[Function]}
              >
                Manage
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home isNewKibanaInstance should safely handle execeptions 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home isNewKibanaInstance should set isNewKibanaInstance to false when there are index patterns 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home isNewKibanaInstance should set isNewKibanaInstance to true when there are no index patterns 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home should render home component 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home welcome should show the normal home page if loading fails 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home welcome should show the normal home page if welcome screen is disabled locally 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;

exports[`home welcome should show the welcome screen if enabled, and there are no index patterns defined 1`] = `
<Welcome
  onSkip={[Function]}
  urlBasePath="goober"
/>
`;

exports[`home welcome stores skip welcome setting if skipped 1`] = `
<div
  className="homPageContainer"
  data-test-subj="homeApp"
>
  <div
    className="homPageHeaderContainer"
  >
    <header
      className="homPageHeader"
    >
      <EuiFlexGroup
        gutterSize="none"
      >
        <EuiFlexItem
          className="homPageHeader__title"
        >
          <EuiTitle
            size="m"
          >
            <h1>
              <FormattedMessage
                defaultMessage="Welcome to {ELASTIC}!"
                id="home.pageHeader.welcomeNoUserTitle"
                values={
                  Object {
                    "ELASTIC": "Elastic",
                  }
                }
              />
            </h1>
          </EuiTitle>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiFlexGroup
            alignItems="flexEnd"
            className="homPageHeader__menu"
          >
            <EuiFlexItem
              className="homPageHeader__menuItem"
            >
              <EuiButtonEmpty
                href="#/tutorial_directory"
                iconType="plusInCircle"
              >
                Add data
              </EuiButtonEmpty>
            </EuiFlexItem>
          </EuiFlexGroup>
        </EuiFlexItem>
      </EuiFlexGroup>
    </header>
  </div>
  <div
    className="homPageMainContainer"
  >
    <main
      className="homPageMain"
    >
      <SolutionsSection
        addBasePath={[Function]}
      />
      <AddData
        addBasePath={[Function]}
        features={Array []}
      />
      <ManageData
        addBasePath={[Function]}
        features={Array []}
      />
      <EuiHorizontalRule
        margin="xl"
      />
      <EuiFlexGroup
        alignItems="center"
        className="homPageFooter"
        gutterSize="s"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        />
        <EuiFlexItem
          grow={false}
        >
          <EuiButtonEmpty
            data-test-subj="allPlugins"
            flush="right"
            href="#/feature_directory"
            iconType="apps"
            size="xs"
          >
            <FormattedMessage
              defaultMessage="View app directory"
              id="home.appDirectory.appDirectoryButtonLabel"
              values={Object {}}
            />
          </EuiButtonEmpty>
        </EuiFlexItem>
      </EuiFlexGroup>
    </main>
  </div>
</div>
`;
